frontend/nba_frontend/src/App.css
.App {
  text-align: center;
  background-image: url('/components/Header/img/background.jpg');
  background-color: #222629;
}

.App-logo {
  height: 40vmin;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  font: 'Abel';
}

.App-link {
  color: #09d3ac;
}

